[package]
name = "paico"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
heck = { version = "0.5.0-rc.1" }
cpal = { version = "0.15.3", features = ["jack", "num-traits"] }
symphonia = "0.5.4"
once_cell = "1.19.0"
ringbuf = "0.3.3"
ctrlc = "3.4.4"
num-traits = "0.2.18"
bitcode = "0.6.0"
dashmap = "5.5.3"
